* fixed bug [ 1188411 ] Missing client text (Chat window) 5.2.2

* fixed bug [ 1205387 ] Saving game during combat 0.5.3 (sgb)

* fixed bug [ 1205775 ] 0.5.3 eMail Bug - hyphens not allowed in emails (sgb)

* fixed bug 1205504	Units can land in amphibious assaults when transport is sunk (sgb)

* fixed bug 1198828	Heavy Bomber Tech Broken 0.5.3 (sgb)

Changes for 0.5.3

* added europe and pacific maps (incomplete versions) by iron cross (George_H)

* added extra dice statistics such as, median, variance, and standard deviation (George_H)

* fix bug [ 1023326 ] Fig Landing Problem, J1 (sgb)

* more flexible validation for planes landing on carriers (sgb)

* add stat export menu item Game->Export Game Stats (sgb)

* upgraded plastic look and feel to version 1.3.1 (sgb)

* add vc drawing and added vc cities to stats (sgb)

* better email address ui and validation, allow up to 5 emails in to and copy (sgb)

* added white factory images (zero_pilot)

* added drawing capitol markers (capitol markers contributed by black elk) (sgb)

* added junit.jar file to lib and removed it from .ant.properties (sgb)

* fixed bug  [ 1070176 ] Mistakes in calculating Battlescore (change in TUV) (sgb)

* fixed bug [ 1116632 ] v0.5.1.1 TripleA skipping battle in Borneo (sgb)

* fixed bug [ 1145318 ] Another Error on 5.2.2 (sgb)

* fixed bug [ 1157717 ] 0.5.2.2 Error with question : Sumerge subs (sgb)

* fixed bug [ 1175467 ] game "stuck" when doing multiple battles with same units (sgb)

* fixed bug [ 1171596 ] Rocket Tech bug v0.5.2.2, we now always ask what territory to attack with rockets, even if there is only one choice, this allows the user to decline a rocket attack (sgb)

* during battles the dice are sorted according to unit type so that when you review the dice rolls, you can tell what unit rolled for which dice (sgb)

* fix bug [ 1144356 ] alter email header on PBEM (this is really a feature request) (sgb)
